docs: Add comprehensive API key security guide to .env
Added detailed instructions for handling the OpenAI API key securely in the .env file.

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,41 @@
 # OpenAI API Configuration
 # TODO: Replace with your actual OpenAI API key
+# $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
+# IMPORTANT: How to Keep Your API Key Safe
+# $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
+#
+# NEVER commit this .env file to GitHub!
+# The .env file is in .gitignore to protect your secrets.
+#
+# WHERE TO KEEP YOUR API KEY:
+# 1. LOCAL DEVELOPMENT:
+#    - Clone repo locally: git clone https://github.com/viswakpullepu/ppt-reviewer-agent.git
+#    - Edit backend/.env (on your local machine ONLY, not on GitHub)
+#    - Replace sk-proj-YOUR-ACTUAL-API-KEY-HERE with your real OpenAI API key
+#    - This file will NOT be uploaded to GitHub (protected by .gitignore)
+#
+# 2. PRODUCTION DEPLOYMENT (BEST PRACTICE):
+#    - Use environment variables on your server/cloud platform
+#    - Heroku: Set via heroku config:set OPENAI_API_KEY=your-key
+#    - AWS: Use AWS Secrets Manager or Systems Manager Parameter Store
+#    - Docker: Pass via docker run -e OPENAI_API_KEY=your-key
+#    - Docker Compose: Use .env file locally, NOT in repository
+#
+# 3. GET YOUR API KEY:
+#    - Visit https://platform.openai.com/api-keys
+#    - Sign up for OpenAI (includes free credits)
+#    - Create a new API key
+#    - Copy it and paste it in the OPENAI_API_KEY line below
+#
+# 4. SECURITY CHECKLIST:
+#    ✓ Never share your API key
+#    ✓ Never paste it in chat, emails, or public sites
+#    ✓ Regenerate key if accidentally exposed
+#    ✓ Use different keys for dev/production
+#    ✓ Always keep .env in .gitignore
+#
+# $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
+
 OPENAI_API_KEY=sk-proj-YOUR-ACTUAL-API-KEY-HERE
 
 # File Upload Settings
